--- a/styles.css
+++ b/styles.css
@@ -4,16 +4,54 @@ body {
     font-family: sans-serif;
 }
 
+.search-bar-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
 .search-bar {
-    width: 100%;
-    /* height: 50px; */
+    width: 80%;
     background-color: white;
     box-shadow: 5px 5px 10px lightgrey;
     border-radius: 40px;
     display: flex;
     align-items: center;
-
+    line-height: 35%;
+   
     i {
         margin: 0 25px;
     }
+}
+
+.search-bar-anywhere {
+    font-weight: 600;
+    color: #2a2a2a;
+    font-size: 90%;
+    align-items: center;
+}
+
+.search-bar-any-week {
+    color: #797979;
+    font-size: 80%;
+    align-items: center;
+}
+
+.search-filters {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: transparent;
+    border-style: solid;
+    border-color: #b0b0b0;
+    display: flex;
+    margin-left: 7%;
+}
+
+.filter-icon {
+    width: 20px;
+    height: 20px;
+    display: block;
+    margin: auto;
 }
