--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body {
     background-color: #f7f7f7;
     padding: 3% 0%;
+    margin-left: 0;
+    margin-right: 0;
     font-family: sans-serif;
 }
 
@@ -87,4 +89,11 @@ body {
 .bar-buttons-icon.active {
     color: black;
     font-weight: 600;
+}
+
+.line {
+    width: 100%;
+    height: 1px;
+    background-color: #e9e9e9;
+    box-shadow: 0px 0 5px 0 lightgrey;
 }
