created first listing, including images, icons and text

--- a/styles.css
+++ b/styles.css
@@ -97,3 +97,74 @@ body {
     background-color: #e9e9e9;
     box-shadow: 0px 0 5px 0 lightgrey;
 }
+
+.first-listing-container {
+    margin: 5% 5%;
+}
+
+.first-listing-text-container {
+    margin-top: 2%;
+
+}
+
+.listing-text {
+    display: flex;
+    justify-content: space-between;
+}
+
+.first-listing-images {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.listing-image-one{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 300px;
+    border-radius: 10px;
+}
+
+.listing-image-heart {
+    height: 30px;
+    width: 30px;
+    position: absolute;
+    margin-top: 12px;
+    margin-right: 15px;
+}
+
+.listing-text-one {
+    line-height: 5px;
+    color: #747474;
+    font-size: 95%;
+}
+
+.listing-text-one.active {
+    color: black;
+    font-weight: 600;
+}
+
+.listing-text-one.active-two {
+    text-decoration: underline;
+    padding-top: 5%;
+}
+
+.listing-text-one-price {
+    color: black;
+}
+
+.listing-text-one-new {
+    font-size: 95%;
+    display: flex;
+    margin-top: 8px;
+
+    p {
+        margin: 0;
+    }
+}
+
+.star-icon {
+    width: 15px;
+    height: 15px;
+    padding-right: 4px;
+}
