--- a/styles.css
+++ b/styles.css
@@ -121,13 +121,13 @@ body {
     display: flex;
     align-items: center;
     width: 100%;
-    height: 300px;
+    height: 325px;
     border-radius: 10px;
 }
 
 .listing-image-heart {
-    height: 30px;
-    width: 30px;
+    height: 25px;
+    width: 25px;
     position: absolute;
     margin-top: 12px;
     margin-right: 15px;
@@ -167,4 +167,32 @@ body {
     width: 15px;
     height: 15px;
     padding-right: 4px;
+}
+
+.second-listing-container {
+    margin: 0% 5%;
+}
+
+.second-listing-images {
+    display: flex;
+    justify-content: flex-end;
+    max-height: 100px;
+    overflow: hidden;
+}
+
+.listing-image-two{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 325px;
+    border-radius: 10px;
+}
+
+.learn-about-bar {
+    display: flex;
+    justify-content: center;
+
+    p {
+        justify-content: center;
+    }
 }
