--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,8 @@ body {
     border-color: #b0b0b0;
     display: flex;
     margin-left: 7%;
+    justify-content: center;
+    align-items: center;
 }
 
 .filter-icon {
@@ -126,8 +128,8 @@ body {
 }
 
 .listing-image-heart {
-    height: 25px;
-    width: 25px;
+    display: flex;
+    justify-content: flex-end;
     position: absolute;
     margin-top: 12px;
     margin-right: 15px;
