Changed the bottom navigation icons to match the Airbnb icons'

--- a/styles.css
+++ b/styles.css
@@ -238,3 +238,11 @@ body {
     width: 25px;
     height: 25px;
 }
+
+.red-search-icon {
+    color: #e91948;
+}
+
+.navigation-bottom-icons {
+    color: #717171;
+}
