Changed the font default size

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
     margin-left: 0;
     margin-right: 0;
     font-family: AirbnbCereal_W_Bk, sans-serif;
+    font-size: 16px;
 }
 
 .search-bar-container {
