Reduce the margin spacing at the top of the screen

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
     padding: 3% 0%;
     margin-left: 0;
     margin-right: 0;
+    margin-top: 0;
     font-family: AirbnbCereal_W_Bk, sans-serif;
     font-size: 16px;
 }
