--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
 .search-bar {
     width: 80%;
     background-color: white;
-    box-shadow: 5px 5px 10px lightgrey;
+    box-shadow: 5px 5px 15px #ececec;
     border-radius: 40px;
     display: flex;
     align-items: center;
