--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
 .search-bar {
     width: 80%;
     background-color: white;
-    box-shadow: 5px 5px 15px #ececec;
+    box-shadow: 5px 5px 5px #ececec;
     border-radius: 40px;
     display: flex;
     align-items: center;
@@ -221,13 +221,13 @@ body {
 .bottom-navigation-container {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     width: 100%;
     /* height: 65px; */
     background-color: white;
     flex-direction: row;
     flex-wrap: nowrap;
-    padding: 10px 5px;
+    padding: 10px 0px;
 }
 
 .navigation-icon {
@@ -235,6 +235,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0px 25px;
 
     p {
         margin: 6px 0px 0px 0px;
