--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 15px 5px;
+    padding: 10px 5px;
     text-align: center;
     font-size: 85%;
     color: #747474;
@@ -148,7 +148,7 @@ body {
     display: flex;
     align-items: center;
     width: 100%;
-    height: 325px;
+    height: 338px;
     border-radius: 10px;
 }
 
@@ -227,6 +227,8 @@ body {
         font-family: AirbnbCereal_W_Bk;
         font-weight: 600;
         justify-content: center;
+        margin-top: 11px;
+        margin-bottom: 11px;
     }
 }
 
